Fix footer spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,10 @@ main > section {
   margin-bottom: 30px;
 }
 
+/*
+  * Footer
+*/
+
 footer {
   background-color: rgba(0, 0, 0, 0.1);
   padding: 30px;
@@ -237,16 +241,23 @@ footer {
 
 footer .badges {
   padding-bottom: 1em;
+  display: flex;
+  justify-content: center;
 }
 
 footer p {
   margin-bottom: 0;
+  line-height: 1;
 }
 
 
 /*
   * Form
 */
+
+form {
+  max-width: 100vmin;
+}
 
 textarea,
 [type=email] {
